--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ nbformat         : 5.10.4
 notebook         : 7.3.3
 qtconsole        : not installed
 traitlets        : 5.14.3
+Python           :3.13.2
